# PokeMCP

./: .gitignore  README.md  pyproject.toml  test_connection.py
.claude/: settings.local.json
data/: map_names.json  pokemon_moves.json  pokemon_species.json
lua/: mgba_server.lua
src/mgba_mcp/: __init__.py  connection.py  constants.py  game_state.py  server.py
